--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>TO-DO LIST</title>
     <link rel="icon" type="image/x-icon" href="images/websiteIcon.png">
     <link rel="stylesheet" href="css/style.css">
-    <!-- Font Awesome Library-->
-    <link rel="stylesheet" href="css/all.min.css">  
+    <!-- Font Awesome Library  -->
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
     <div class="container">
